# 01

./: .gitignore
OS/01/app/: index.html
OS/01/app/audio-server/: .gitignore  Cargo.toml  README.md
OS/01/audio/audio-local/: startup_sequence.sh
OS/01/audio/audio-local/config/: asound.conf  audioio.service
OS/01/audio/audio-server/: Cargo.toml
OS/01/audio/audio-server/src/: main.rs  transcribe.rs
