[package]
name = "audio-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
hound = "3.5.1"
symphonia = "0.5.3"
whisper-rs = "0.10.0"
whisper-rs-sys = "0.8.0"
